CMAKE_MINIMUM_REQUIRED(VERSION 2.7)
SET(CMAKE_CXX_FLAGS "-std=c++11 -pthread")
SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2")
SET(CMAKE_CXX_FLAGS_DEBUG "-g")
SET(CMAKE_BUILD_TYPE Release)

PROJECT(RobotUtil4RasPi CXX)
SET(serial "0.0.1")
SET(soserial "0")
INCLUDE_DIRECTORIES("wiringPi")
ADD_LIBRARY(RobotUtil SHARED ScrpMaster.cpp)
SET_TARGET_PROPERTIES(RobotUtil PROPERTIES VERSION ${serial} SOVERSION ${soserial})
INSTALL(TARGETS RobotUtil LIBRARY DESTINATION lib)
INSTALL(FILES RobotUtil.h DESTINATION include)
