CMAKE_MINIMUM_REQUIRED(VERSION 2.7)
SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2 -std=c++11 -pthread")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -std=c++11 -pthread")
SET(CMAKE_BUILD_TYPE Debug)

PROJECT(RobotUtil4RasPi CXX)
SET(serial "0.0.2")
SET(soserial "0")
INCLUDE_DIRECTORIES("wiringPi")
ADD_LIBRARY(RobotUtil STATIC ScrpMaster.cpp)
SET_TARGET_PROPERTIES(RobotUtil PROPERTIES VERSION ${serial} SOVERSION ${soserial})
INSTALL(TARGETS RobotUtil DESTINATION lib)
INSTALL(FILES RobotUtil.hpp ScrpMaster.hpp ScrpSlave.hpp Ds3Read.hpp Motor.hpp DESTINATION include)
