CMAKE_MINIMUM_REQUIRED(VERSION 2.7)
SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2 -std=c++11 -pthread")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -std=c++11 -pthread")
SET(CMAKE_BUILD_TYPE Dbug)

PROJECT(RobotUtil4RasPi CXX)
SET(serial "0.2.1")
SET(soserial "0")
INCLUDE_DIRECTORIES("wiringPi")
ADD_LIBRARY(RobotUtil STATIC src/ScrpMaster.cpp src/Ds3Read.cpp src/Motor.cpp)
SET_TARGET_PROPERTIES(RobotUtil PROPERTIES VERSION ${serial} SOVERSION ${soserial})
INSTALL(TARGETS RobotUtil DESTINATION lib)
INSTALL(FILES src/RobotUtil.hpp src/ScrpMaster.hpp src/Ds3Read.hpp src/Motor.hpp DESTINATION include)
